# gestemp

./: .gitignore  CMakeLists.txt  README.md  config.ini
doc/: GESTEMP.md
include/gestemp/: fan.h  menu.h  queries.h  tempctrl.h  tempsensor.h  theme.h  users.h  utils.h  zone.h
lib/listview/include/listview/: listview.h
lib/listview/src/: listview.c
src/: fan.c  main.c  menu.c  queries.c  tempctrl.c  tempctrl.cpp  tempsensor.c  theme.c  users.c  utils.c  zone.c
